Added logic to show message reactions bottom sheet dialog. Note. The info dialog currently works only with self reactions.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -155,5 +155,6 @@
     <string name="sceyt_message_copied">Message copied</string>
     <string name="sceyt_forward_message">Forward message</string>
     <string name="forwarded_message">Forwarded message</string>
+    <string name="all">All</string>
 
 </resources>
