Added logic to show last reaction in channels list view.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -147,5 +147,7 @@
     <string name="sceyt_forward_message">Forward message</string>
     <string name="sceyt_forwarded_message">Forwarded message</string>
     <string name="sceyt_all">All</string>
+    <string name="sceyt_reacted">Reacted</string>
+    <string name="sceyt_to">to</string>
 
 </resources>
