Added logic to save draft message.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -149,5 +149,6 @@
     <string name="sceyt_all">All</string>
     <string name="sceyt_reacted">Reacted</string>
     <string name="sceyt_to">to</string>
+    <string name="sceyt_draft">Draft</string>
 
 </resources>
