Fixed issue to show pending message when channel has message reaction. Added logic to start sync after sending pending messages and sending pending markers. Fixed issue to update user online state. Added French translations.

--- a/SceytChatUiKit/src/main/res/values-ar/strings.xml
+++ b/SceytChatUiKit/src/main/res/values-ar/strings.xml
@@ -149,4 +149,7 @@
     <string name="sceyt_reacted">رد فعل</string>
     <string name="sceyt_to">ل</string>
     <string name="sceyt_draft">مسودة</string>
+    <string name="sceyt_stop_recording">الغاء  الرسالة الصوتية؟</string>
+    <string name="sceyt_stop_recording_desc">هل أنت متأكد من أنك تريد إيقاف التسجيل والغاء رسالتك الصوتية؟</string>
+    <string name="sceyt_discard">الغاء</string>
 </resources>
