--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -162,5 +162,6 @@
     <string name="sceyt_settings">Settings</string>
     <string name="empty_message_body_message">Please enter message body</string>
     <string name="preparing">Preparing…</string>
+    <string name="sending_attachment">Sending an attachment</string>
 
 </resources>
