--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -167,6 +167,7 @@
     <string name="sceyt_chat">chat</string>
     <string name="sceyt_mute_">Mute</string>
     <string name="sceyt_un_mute_">Unmute</string>
-    <string name="rich_max_message_select_count">You can select up to %1$s messages.</string>
+    <string name="sceyt_rich_max_message_select_count">You can select up to %1$s messages.</string>
+    <string name="sceyt_clear_chat">Clear Chat</string>
 
 </resources>
