--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="sceyt_search">Search</string>
     <string name="sceyt_your_last_message">You</string>
     <string name="sceyt_copy">Copy</string>
-    <string name="sceyt_no_channels">No Channels</string>
+    <string name="sceyt_no_channels">No Chats yet</string>
     <string name="sceyt_message">Message</string>
     <string name="sceyt_online">online</string>
     <string name="sceyt_members_count">%1$d members</string>
