--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -196,5 +196,8 @@
     <string name="delete_message">Delete_message</string>
     <string name="delete_message_desc">Are you sure you want to delete this message?</string>
     <string name="delete_for_all">Delete for all</string>
+    <string name="sceyt_not_found">Not found</string>
+    <string name="sceyt_search_messages">Search messages</string>
+    <string name="of">of</string>
 
 </resources>
