Added logic to create self channel. Improved logic to manage self channel.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -199,5 +199,6 @@
     <string name="sceyt_not_found">Not found</string>
     <string name="sceyt_search_messages">Search messages</string>
     <string name="of">of</string>
+    <string name="self_notes">Self Notes</string>
 
 </resources>
