Add logic to set empty self channel state.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -200,5 +200,7 @@
     <string name="sceyt_search_messages">Search messages</string>
     <string name="of">of</string>
     <string name="self_notes">Self Notes</string>
+    <string name="add_notes">Add Notes</string>
+    <string name="add_notes_for_yourself_here">Add notes for yourself here.</string>
 
 </resources>
