--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -193,7 +193,7 @@
     <string name="select_photo">Select photo</string>
     <string name="edit_channel">Edit channel</string>
     <string name="delete_messages">Delete messages</string>
-    <string name="delete_message">Delete_message</string>
+    <string name="delete_message">Delete message</string>
     <string name="delete_message_desc">Are you sure you want to delete this message?</string>
     <string name="delete_for_all">Delete for all</string>
     <string name="sceyt_not_found">Not found</string>
