--- a/examples/SceytDemoApp/src/main/res/values/strings.xml
+++ b/examples/SceytDemoApp/src/main/res/values/strings.xml
@@ -23,5 +23,12 @@
     <string name="channel_name">Channel name</string>
     <string name="display_name_is_empty">Display name is empty!</string>
     <string name="mute_notifications">Mute notifications:</string>
+    <string name="username_correct_input_hint">Use a-z, 0-9 and underscores. Username \n length must be 3 to 20 characters.</string>
+    <string name="create_account">Create Account</string>
+    <string name="create_account_hint">You haven’t created channels yet, \n create one for sending messages.</string>
+    <string name="error_username_taken">Username is already taken</string>
+    <string name="login_screen_title">Fast and Seamless \nChat API</string>
+    <string name="no_created_channels_description">You haven’t created channels yet, \n create one for sending messages.</string>
+    <string name="choose_account">Choose Account</string>
 
 </resources>
