--- a/examples/SceytDemoApp/src/main/res/values/strings.xml
+++ b/examples/SceytDemoApp/src/main/res/values/strings.xml
@@ -34,6 +34,6 @@
     <string name="last_name">Last name</string>
     <string name="user_name">username</string>
     <string name="select_account">Select Account</string>
-    <string name="username_is_empty">Username name is empty!</string>
+    <string name="username_is_empty">username is empty!</string>
 
 </resources>
