--- a/examples/SceytDemoApp/src/main/res/values/strings.xml
+++ b/examples/SceytDemoApp/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SceytChatDemo</string>
+    <string name="app_name">Sceyt Chat</string>
     <string name="login_title">Getting Started</string>
     <string name="login_subtitle">Just enter your username, click connect button and start</string>
     <string name="username">Username</string>
