--- a/examples/SceytDemoApp/src/main/res/values/strings.xml
+++ b/examples/SceytDemoApp/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">Sceyt Chat</string>
     <string name="login_title">Getting Started</string>
     <string name="login_subtitle">Just enter your username, click connect button and start</string>
     <string name="username">Username</string>
@@ -37,6 +36,6 @@
     <string name="error_username_taken">Username is already taken</string>
     <string name="username_is_available">Username is available</string>
     <string name="username_length_error">Username length must be 3 to 20 characters</string>
-    <string name="username_invalid_characters">Use a-z, 0-9 and underscores</string>
+    <string name="username_invalid_characters">Use a–z, 0-9 and underscores</string>
     <string name="delete_user">Delete user</string>
 </resources>
