--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -230,4 +230,5 @@
     <string name="sceyt_connecting_title">Connecting…</string>
     <string name="sceyt_disconnected_title">Disconnected</string>
     <string name="sceyt_chats">Chats</string>
+    <string name="recording">recording</string>
 </resources>
