- Add channel list user activity. - Improved ChannelMemberActivityEvent.kt

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -231,4 +231,5 @@
     <string name="sceyt_disconnected_title">Disconnected</string>
     <string name="sceyt_chats">Chats</string>
     <string name="recording">recording</string>
+    <string name="recording_">recording…</string>
 </resources>
