- Unify string resource prefixes. - Add toast message for copied invite link.

--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -230,19 +230,20 @@
     <string name="sceyt_connecting_title">Connecting…</string>
     <string name="sceyt_disconnected_title">Disconnected</string>
     <string name="sceyt_chats">Chats</string>
-    <string name="recording">recording</string>
-    <string name="recording_">recording…</string>
+    <string name="sceyt_recording">recording</string>
+    <string name="sceyt_recording_">recording…</string>
     <string name="sceyt_invite_link">Invite link</string>
     <string name="sceyt_show_previous_messages">Show Previous Messages</string>
     <string name="sceyt_show_previous_messages_desc">Message history is visible to new members</string>
     <string name="sceyt_reset_link">Reset Link</string>
     <string name="sceyt_open_qr_code">Open QR Code</string>
     <string name="sceyt_qr_code_for_invites">QR Code for Invites</string>
-    <string name="share_qr_code">Share QR Code</string>
-    <string name="share_channel_link_desc">Show or send this to anyone who\nwants to join this group</string>
-    <string name="reset_link_desc">Are you sure you want to reset the group link? Anyone with the existing link will no longer be able to use it to join.</string>
-    <string name="reset">Reset</string>
-    <string name="join_group">Join Group</string>
-    <string name="group_chat_invite">Group Chat Invite</string>
-    <string name="and_others">%1$s and %2$d others</string>
+    <string name="sceyt_share_qr_code">Share QR Code</string>
+    <string name="sceyt_share_channel_link_desc">Show or send this to anyone who\nwants to join this group</string>
+    <string name="sceyt_reset_link_desc">Are you sure you want to reset the group link? Anyone with the existing link will no longer be able to use it to join.</string>
+    <string name="sceyt_reset">Reset</string>
+    <string name="sceyt_join_group">Join Group</string>
+    <string name="sceyt_group_chat_invite">Group Chat Invite</string>
+    <string name="sceyt_and_others">%1$s and %2$d others</string>
+    <string name="sceyt_link_copied">Link copied</string>
 </resources>
