--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -245,4 +245,5 @@
     <string name="sceyt_group_chat_invite">Group Chat Invite</string>
     <string name="sceyt_and_others">%1$s and %2$d others</string>
     <string name="sceyt_link_copied">Link copied</string>
+    <string name="unsupported_message_text">This message is not supported.</string>
 </resources>
