--- a/SceytChatUiKit/src/main/res/values/strings.xml
+++ b/SceytChatUiKit/src/main/res/values/strings.xml
@@ -247,7 +247,7 @@
     <string name="sceyt_link_copied">Link copied</string>
     <string name="sceyt_view_results">View Results</string>
     <string name="sceyt_public_poll">Public poll</string>
-    <string name="sceyt_anonymous_poll">Anonymous poll</string>
+    <string name="sceyt_anonymous_poll_and_type">Anonymous poll • %1$s</string>
     <string name="sceyt_poll_finished">Poll finished</string>
     <string name="sceyt_poll">Poll</string>
     <string name="sceyt_poll_question">Question</string>
@@ -267,4 +267,6 @@
     <string name="sceyt_not_now">Not now</string>
     <string name="sceyt_end_poll_dialog_desc">Are you sure you want to end this poll? People will no longer be able to vote.</string>
     <string name="sceyt_end_poll_dialog_title">End poll?</string>
+    <string name="multiple_votes">Multiple votes</string>
+    <string name="single_vote">Single vote</string>
 </resources>
