--- a/SceytChatUiKit/src/main/res/values-fr/strings.xml
+++ b/SceytChatUiKit/src/main/res/values-fr/strings.xml
@@ -8,10 +8,10 @@
     <string name="sceyt_no_channels">Pas de canaux</string>
     <string name="sceyt_message">Message</string>
     <string name="sceyt_online">en ligne</string>
-    <string name="sceyt_members_count">%1d membres</string>
-    <string name="sceyt_member_count">%1d membre</string>
-    <string name="sceyt_subscribers_count">%1$d abonnés</string>
-    <string name="sceyt_subscriber_count">%1$d abonné</string>
+    <string name="sceyt_members_count">%1$s membres</string>
+    <string name="sceyt_member_count">%1$s membre</string>
+    <string name="sceyt_subscribers_count">%1$s abonnés</string>
+    <string name="sceyt_subscriber_count">%1$s abonné</string>
     <string name="sceyt_hint_channel_subject">Sujet</string>
     <string name="sceyt_add_members">Ajouter des membres</string>
     <string name="sceyt_add_subscribers">Ajouter des abonnés</string>
