--- a/SceytChatUiKit/src/main/res/values-so/strings.xml
+++ b/SceytChatUiKit/src/main/res/values-so/strings.xml
@@ -8,10 +8,10 @@
     <string name="sceyt_no_channels">No Channels</string>
     <string name="sceyt_message">Fariin</string>
     <string name="sceyt_online">Online</string>
-    <string name="sceyt_members_count">%1$d members</string>
-    <string name="sceyt_member_count">%1$d member</string>
-    <string name="sceyt_subscribers_count">%1$d subscribers</string>
-    <string name="sceyt_subscriber_count">%1$d subscriber</string>
+    <string name="sceyt_members_count">%1$s members</string>
+    <string name="sceyt_member_count">%1$s member</string>
+    <string name="sceyt_subscribers_count">%1$s subscribers</string>
+    <string name="sceyt_subscriber_count">%1$s subscriber</string>
     <string name="sceyt_hint_channel_subject">Subject</string>
     <string name="sceyt_add_members">Ku dar xubno</string>
     <string name="sceyt_add_subscribers">Add subscribers</string>
